test/code/test_class_final.php
<?php

final class A {}

class B extends A {}

